[BG-6588] GoPay - fix hiding if payment is already hidden.
- If is payment already hidden it doesnt allow to unhide payment automatically

Use case:
1. Payment is hidden
2. GoPay hide payment
3. GoPay unhide payment
4. Payment is not unhidden because it was hidden by admin before hiding by GoPay

--- a/src/Shopsys/ShopBundle/Resources/translations/messages.cs.po
+++ b/src/Shopsys/ShopBundle/Resources/translations/messages.cs.po
@@ -2245,6 +2245,9 @@ msgstr ""
 msgid "Tento stav není možné smazat, jelikož je na něj navázána funkčnost"
 msgstr ""
 
+msgid "Tento způsob platby je skrytý systémem GoPay."
+msgstr ""
+
 msgid "Terms and conditions"
 msgstr "Obchodní podmínky"
 
