--- a/src/Shopsys/ShopBundle/Resources/translations/messages.de.po
+++ b/src/Shopsys/ShopBundle/Resources/translations/messages.de.po
@@ -403,6 +403,9 @@ msgstr "Ich möchte andere Rechnungsinformationen eingeben"
 msgid "Choose"
 msgstr "Wähle"
 
+msgid "Choose variant"
+msgstr ""
+
 msgid "Chyba při přenosu"
 msgstr "Übertragungsfehler"
 
