--- a/src/Shopsys/ShopBundle/Resources/translations/messages.sk.po
+++ b/src/Shopsys/ShopBundle/Resources/translations/messages.sk.po
@@ -1876,14 +1876,14 @@ msgstr "Vytlačiť"
 msgid "Pro lidi s životním názorem, který nás spojuje.“"
 msgstr "Pre ľudí so životným názorom, ktorý nás spája. \""
 
-msgid "Pro plochy 1, 2, 3, 4 - čtverec (380x230px), pro plochu 5 - velký obdelník na šířku (1180x387px), pro plochu 6 - obdélník na výšku (190x460px)."
+msgid "Pro plochy 1, 2, 3 - čtverec (380x230px), pro plochu 4 - velký obdelník na šířku (1180x387px)."
 msgstr ""
 
-msgid "Pro plochy 1, 2, 3, 4 - čtverec (380x290px), pro plochu 5 - obdélník na výšku (380x600px), pro plochu 6 - velký obdelník na šířku (190x460px)."
-msgstr "Pre plochy 1, 2, 3, 4 - štvorec (380x290px), pre plochu 5 - obdĺžnik na výšku (380x600px), pre plochu 6 - veľký obdĺžnik na šírku (190x460px)."
+msgid "Pro plochy 1, 2, 3 - čtverec (380x290px), pro plochu 4 - obdélník na výšku (380x600px)."
+msgstr "Pre plochy 1, 2, 3 - štvorec (380x290px), pre plochu 4 - obdĺžnik na výšku (380x600px)."
 
-msgid "Pro plochy 1, 2, 3, 4 - čtverec (397x306), pro plochu 5 - obdélník na výšku (380x600px), pro plochu 6 - velký obdelník na šířku (190x460px)."
-msgstr "Pre plochy 1, 2, 3, 4 - štvorec (397x306), pre plochu 5 - obdĺžnik na výšku (380x600px), pre plochu 6 - veľký obdĺžnik na šírku (190x460px)."
+msgid "Pro plochy 1, 2, 3 - čtverec (397x306), pro plochu 4 - obdélník na výšku (380x600px)"
+msgstr "Pre plochy 1, 2, 3 - štvorec (397x306), pre plochu 4 - obdĺžnik na výšku (380x600px)."
 
 msgid "Pro termín doručení a dostupnost na prodejnách si vyberte z velikostí."
 msgstr "Pre termín a dostupnosť na predaj si vyberte z veľkostí."
