--- a/src/Shopsys/ShopBundle/Resources/translations/dataFixtures.sk.po
+++ b/src/Shopsys/ShopBundle/Resources/translations/dataFixtures.sk.po
@@ -34,10 +34,19 @@ msgstr ""
 msgid "Cookies"
 msgstr ""
 
+msgid "Dobrý den,<br /><br />Vaše objednávka byla úspěšně vytvořena.<br /><br />O dalších stavech objednávky Vás budeme informovat.<br />Čislo objednávky: {number} <br />Datum a čas vytvoření: {date} <br />URL adresa eshopu: {url} <br />URL adresa na detail objednávky: {order_detail_url} <br />Doprava: {transport} <br />Číslo pro sledování zásilky: {tracking_number} <br />URL pro sledování zásilky: {tracking_url} <br />Platba: {payment} <br />Celková cena s DPH: {total_price} <br />Fakturační adresa:<br /> {billing_address} <br />Doručovací adresa: {delivery_address} <br />Poznámka: {note} <br />Produkty: {products} <br />{transport_instructions} <br />{payment_instructions}"
+msgstr ""
+
 msgid "Donec at dolor mi. Nullam ornare, massa in cursus imperdiet, felis nisl auctor ante, vel aliquet tortor lacus sit amet ipsum. Proin ultrices euismod elementum. Integer sodales hendrerit tortor, vel semper turpis interdum eu. Phasellus quam tortor, feugiat vel condimentum vel, tristique et ipsum. Duis blandit lectus in odio cursus rutrum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam pulvinar massa at imperdiet venenatis. Maecenas convallis lobortis quam in fringilla. Mauris gravida turpis eget sapien imperdiet pulvinar. Nunc velit urna, fringilla nec est sit amet, accumsan varius nunc. Morbi sed tincidunt diam, sit amet laoreet nisl. Nulla tempus id lectus non lacinia.\\n\\nVestibulum interdum adipiscing iaculis. Nunc posuere pharetra velit. Nunc ac ante non massa scelerisque blandit sit amet vel velit. Integer in massa sed augue pulvinar malesuada. Pellentesque laoreet orci augue, in fermentum nisl feugiat ut. Nunc congue et nisi a interdum. Aenean mauris mi, interdum vel lacus et, placerat gravida augue. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed sagittis ipsum et consequat euismod. Praesent a ipsum dapibus, aliquet justo a, consectetur magna. Phasellus imperdiet tempor laoreet. Sed a accumsan lacus, accumsan faucibus dolor. Praesent euismod justo quis ipsum aliquam suscipit. Sed quis blandit urna."
 msgstr ""
 
+msgid "Děkujeme za objednávku č. {number} ze dne {date}"
+msgstr ""
+
 msgid "Elektro"
+msgstr ""
+
+msgid "Export osobních údajů - {domain}"
 msgstr ""
 
 msgid "Food is any substance consumed to provide nutritional support for the body. It is usually of plant or animal origin, and contains essential nutrients, such as fats, proteins, vitamins, or minerals. The substance is ingested by an organism and assimilated by the organism's cells to provide energy, maintain life, or stimulate growth."
@@ -121,7 +130,16 @@ msgstr ""
 msgid "Prohlédnout"
 msgstr ""
 
+msgid "Přehled osobních údajů - {domain}"
+msgstr ""
+
+msgid "Registrace byla dokončena"
+msgstr ""
+
 msgid "Silnější než kdy předtím..."
+msgstr ""
+
+msgid "Stav objednávky se změnil"
 msgstr ""
 
 msgid "Tabulka velikostí pro produkty"
@@ -142,6 +160,27 @@ msgstr ""
 msgid "Velkoobchodní prodej pro obchodníky provádíme již od roku 1992. Od roku 2013 umožňujeme obchodníkům s papírenským zbožím i pohodlný nákup přes tento internetový obchod. Každý zaregistrovaný zákazník vidí své aktuální ceny. O B2B mohou žádat pouze ochdodníci, kteří mají naše zboží určeno pro další prodej."
 msgstr ""
 
+msgid "Vážený zákazníku, <br /><br />Vaše objednávka byla zrušena."
+msgstr ""
+
+msgid "Vážený zákazníku, <br /><br />Vaše objednávka se zpracovává."
+msgstr ""
+
+msgid "Vážený zákazníku, <br /><br />Vaše registrace je dokončena. <br />Jméno: {first_name} {last_name}<br />E-mail: {email}<br />Adresa e-shopu: {url}<br />Přihlašovací stránka: {login_page}"
+msgstr ""
+
+msgid "Vážený zákazníku, <br /><br />zpracování objednávky bylo dokončeno."
+msgstr ""
+
+msgid "Vážený zákazníku,<br /><br /> na základě vašeho zadaného emailu {e-mail}, Vám zasíláme odkaz na zobrazení osobních údajů. Klikem na odkaz níže se dostanete na stránku s <br/> přehledem všech osobních údajů, které k Vašemu e-mailu evidujeme na našem e-shopu {domain}.<br/><br/> Pro zobrazení osobních údajů klikněte zde - {url}<br/> Odkaz je platný 24 hodin.<br/><br/> S pozdravem<br/> tým {domain}"
+msgstr ""
+
+msgid "Vážený zákazníku,<br /><br />na tomto odkazu můžete nastavit nové heslo: <a href=\"{new_password_url}\">{new_password_url}</a>"
+msgstr ""
+
+msgid "Vážený zákazníku,<br/><br/> na základě vašeho zadaného emailu {e-mail}, Vám zasíláme odkaz ke stažení Vašich<br/> údajů evidovaných na našem internetovém obchodě ve strojově čitelném formátu.<br/> Klikem na odkaz se dostanete na stránku s s možností stažení těchto informací, které k<br/> Vašemu e-mailu evidujeme na našem internetovém obchodu {domain}.<br/><br/> Pro přechod na stažení údajů, prosím, klikněte zde - {url}<br/> Odkaz je platný 24 hodin.<br/><br/> S pozdravem<br/> tým {domain}"
+msgstr ""
+
 msgid "Zahradní náčiní"
 msgstr ""
 
@@ -149,5 +188,8 @@ msgid "Zásady ochrany osobních údajů"
 msgstr ""
 
 msgid "Šití na míru"
+msgstr ""
+
+msgid "Žádost o heslo"
 msgstr ""
 
