--- a/src/Shopsys/ShopBundle/Resources/translations/dataFixtures.sk.po
+++ b/src/Shopsys/ShopBundle/Resources/translations/dataFixtures.sk.po
@@ -109,11 +109,17 @@ msgstr ""
 msgid "Morbi posuere mauris dolor, quis accumsan dolor ullamcorper eget. Phasellus at elementum magna, et pretium neque. Praesent tristique lorem mi, eget varius quam aliquam eget. Vivamus ultrices interdum nisi, sed placerat lectus fermentum non. Phasellus ac quam vitae nisi aliquam vestibulum. Sed rhoncus tortor a arcu sagittis placerat. Nulla lectus nunc, ultrices ac faucibus sed, accumsan nec diam. Nam auctor neque quis tincidunt tempus. Nunc eget risus tristique, lobortis metus vitae, pellentesque leo. Vivamus placerat turpis ac dolor vehicula tincidunt. Sed venenatis, ante id ultrices convallis, lacus elit porttitor dolor, non porta risus ipsum ac justo. Integer id pretium quam, id placerat nulla."
 msgstr ""
 
+msgid "Na dotaz"
+msgstr "Na dotaz"
+
 msgid "Nabídka potisků triček"
 msgstr ""
 
 msgid "Nadčasové splynutí s přírodou. Sama víte, že i na procházce se psem můžete vypadat dobře a přirozeně"
 msgstr ""
+
+msgid "Nedostupné"
+msgstr "Nedostupné"
 
 msgid "Novinky"
 msgstr ""
@@ -142,6 +148,9 @@ msgstr ""
 msgid "Přehled osobních údajů - {domain}"
 msgstr ""
 
+msgid "Připravujeme"
+msgstr "Pripravujeme"
+
 msgid "Registrace byla dokončena"
 msgstr ""
 
@@ -153,6 +162,9 @@ msgstr ""
 
 msgid "Silnější než kdy předtím..."
 msgstr ""
+
+msgid "Skladem"
+msgstr "Skladom"
 
 msgid "Stav objednávky se změnil"
 msgstr ""
