data fixtures: BrandDataFixture are now translated using translator
- see https://github.com/shopsys/shopsys/pull/1425

--- a/src/Shopsys/ShopBundle/Resources/translations/dataFixtures.cs.po
+++ b/src/Shopsys/ShopBundle/Resources/translations/dataFixtures.cs.po
@@ -187,6 +187,9 @@ msgstr ""
 msgid "Tiskárny"
 msgstr ""
 
+msgid "Toto je popis značky %brandName%."
+msgstr ""
+
 msgid "Ukázkový článek blogu %locale%"
 msgstr ""
 
