InfoRowDataFixture now use translator
- see https://github.com/shopsys/shopsys/pull/1425

--- a/src/Shopsys/ShopBundle/Resources/translations/dataFixtures.cs.po
+++ b/src/Shopsys/ShopBundle/Resources/translations/dataFixtures.cs.po
@@ -211,6 +211,9 @@ msgstr ""
 msgid "Ukázkový článek blogu %locale%"
 msgstr ""
 
+msgid "Upozornění pro naše zákazníky - tato verze e-shopu obsahuje testovací data."
+msgstr ""
+
 msgid "V tuto chvíli nemáme žádné otevřené pozice."
 msgstr ""
 
